hide slider on small screen and fix position slider indications

--- a/css/slider/slider.scss
+++ b/css/slider/slider.scss
@@ -23,9 +23,7 @@ $hightligting-color: #f00;
   display: block;
 }
 
-.carousel-indicators {
-  margin-right: 0;
-}
+
 
 .carousel-indicators li {
   background-color: rgba(255, 255, 255, 0.0);
